--- a/Python Analysis/Model Verification.ipynb
+++ b/Python Analysis/Model Verification.ipynb
@@ -9,8 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table = pd.read_excel('C:\\\\Users\\\\bowenm\\\\Documents\\\\verification.xlsx')"
@@ -44,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "names = []\n",
@@ -57,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table = table[:228]\n",
@@ -67,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table = table.set_index('z')\n",
@@ -1952,36 +1962,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def Temp(pos, dx, T0, k):\n",
     "    if pos >=.1016:\n",
     "        k = k\n",
+    "        c = q[0]/k\n",
     "    else:\n",
     "        k = 400\n",
+    "        c = .07852*q[0]/.05328\n",
     "    return T0+q[0]*dx/k\n",
     "\n",
     "def temp(pos, k):\n",
     "    if pos >.1016:\n",
-    "        return 293.1499999901 + q[0]*.1016/400 + q[0]*(pos-.10146)/k\n",
+    "        return 293.1499999901 + q[0]*.07852*.1016/(400*.05328) + q[0]*(pos-.10146)/k\n",
     "    else:\n",
     "        return 293.1499999901+q[0]*pos/400"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "x=np.arange(0, .1046, .000001)"
+    "x=np.arange(0, .1046, .0001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,6 +2012,57 @@
     "        y2 = np.append(y2, temp(val, kval))\n",
     "    y2s = np.vstack((y2s, y2))\n",
     "    ys = np.vstack((ys, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x9e49c18>]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAH0ZJREFUeJzt3X+MpVd93/H3997n/r4zs7v24Biv\n6Trppo0dEZsstiWqikDiX5VqokBlooYtRXKq2lKQSIpNKpkfdQVRiFWkxK0jO5iKxrgQxCpy4y4O\nJKUq2GswhsW4HmyDl93ihfXOzv3969s/nnNn787embnz887e5/OSruaZc5/7zDme9f3Mec4595i7\nIyIiyZMadwVERGQ8FAAiIgmlABARSSgFgIhIQikAREQSSgEgIpJQCgARkYRSAIiIJJQCQEQkoaJx\nV2AlF198se/bt2/c1RARuaA8/fTTP3X32dXO29EBsG/fPo4cOTLuaoiIXFDM7IejnKdbQCIiCaUA\nEBFJKAWAiEhCKQBERBJKASAiklAKABGRhFIAiIgk1GQGQHMBvvIf4djT466JiMiONZkB0G3D330C\njj017pqIiOxYkxkA2XL8tbUw3nqIiOxgkxkAURbSWWhWxl0TEZEdazIDAOJeQEsBICKynMkNgFxZ\nPQARkRVMbgBkp9QDEBFZweQGQK4cTwcVEZGhJjcANAYgIrKiiQyAVqfH6W6OTkMBICKynFUDwMzy\nZvakmX3bzI6a2UdC+afN7CUzeyY8rg7lZmafMrM5M3vWzN40cK2DZvZCeBzcqkadabQ5PFehWZ3f\nqh8hInLBG2VLyCbwNnevmFkG+JqZ/Y/w3B+4++eXnH8zsD88rgPuB64zsz3APcABwIGnzeyQu7+2\nGQ0ZVM5FVCgQdaqbfWkRkYmxag/AY/17KZnw8BVecivwmfC6rwO7zOxS4EbgsLufCm/6h4GbNlb9\n4XJRihp5Mp0a+EpVFRFJrpHGAMwsbWbPAK8Sv4l/Izx1b7jNc5+Z5ULZZcArAy8/FsqWK1/6s243\nsyNmduTkyZNrbM7iNWhHJVJ0odNY1zVERCbdSAHg7l13vxrYC1xrZr8M3A38Y+DNwB7gg+F0G3aJ\nFcqX/qwH3P2Aux+YnZ0dpXpDdaJSfKDFYCIiQ61pFpC7nwa+Ctzk7ifCbZ4m8BfAteG0Y8DlAy/b\nCxxfoXxLdPsBoA+EExEZapRZQLNmtiscF4BfB74f7utjZga8A/hueMkh4D1hNtD1wLy7nwAeB24w\ns91mthu4IZRtiV7/E0HVAxARGWqUWUCXAg+bWZo4MB519782s781s1niWzvPAP8mnP8YcAswB9SA\n9wK4+ykz+xjQ/5D+j7r7qc1ryrk82+8BaCaQiMgwqwaAuz8LXDOk/G3LnO/AHcs89xDw0BrruC62\nuCeAegAiIsNM5EpggFR+Kj7Q5wGJiAw1wQGgHoCIyEomNgCiwnR8oEFgEZGhJjYAMiEAug3dAhIR\nGWaUWUAXpGI+T8MzUD9DetyVERHZgSa2B9D/QLhO/cy4qyIisiNNbACUchFVz9PVngAiIkNNcACk\nqZHHNQ1URGSoiQ2A+BZQHtcsIBGRoSY2AIrZiKoXMK0DEBEZamIDoN8DSLX1WUAiIsNMbACUcmmq\nXiDdVg9ARGSYCQ6AiCp57QssIrKMiQ2AXJSiZgUy3br2BRYRGWJiA8DMaKdLpOhBuz7u6oiI7DgT\nGwAA3agYH2gmkIjIeSY7ADL9jeG1GExEZKmJDoBePwDUAxAROc9EBwDZ/q5gCgARkaUmOwBy2hVM\nRGQ5qwaAmeXN7Ekz+7aZHTWzj4TyK8zsG2b2gpl9zsyyoTwXvp8Lz+8buNbdofx5M7txqxq1+PP6\n20JqDEBE5Dyj9ACawNvc/VeAq4GbzOx64BPAfe6+H3gNeF84/33Aa+7+D4H7wnmY2ZXAbcBVwE3A\nn5nZlu7VEuXDtpDqAYiInGfVAPBY/x00Ex4OvA34fCh/GHhHOL41fE94/u1mZqH8EXdvuvtLwBxw\n7aa0YhlRQWMAIiLLGWkMwMzSZvYM8CpwGPgBcNrdO+GUY8Bl4fgy4BWA8Pw8cNFg+ZDXDP6s283s\niJkdOXny5NpbNCBbjAOgo32BRUTOM1IAuHvX3a8G9hL/1f5Lw04LX22Z55YrX/qzHnD3A+5+YHZ2\ndpTqLauYy1H3LO26AkBEZKk1zQJy99PAV4HrgV1m1t9Ufi9wPBwfAy4HCM/PAKcGy4e8ZksUw0dC\nd7UvsIjIeUaZBTRrZrvCcQH4deA54CvAO8NpB4EvheND4XvC83/r7h7KbwuzhK4A9gNPblZDhinn\n4k1huroFJCJynmj1U7gUeDjM2EkBj7r7X5vZ94BHzOw/AN8CHgznPwj8VzObI/7L/zYAdz9qZo8C\n3wM6wB3u3t3c5pyr/5HQuzQNVETkPKsGgLs/C1wzpPxFhszicfcG8K5lrnUvcO/aq7k+5VyaCgXN\nAhIRGWKiVwKXchFVz2tfYBGRISY7ALIRNfKY9gUWETnPRAdAORdR8TxpbQspInKeiQ6AeBC4QKZT\nG3dVRER2nIkOgGyUom4FMt2a9gUWEVliogMAoB0VMRxaug0kIjJo4gOgk9auYCIiw0x8AHQz/T0B\nFAAiIoMmPgA82+8BaDWwiMigiQ8A+gGgHoCIyDkmPgAsFzaF0SCwiMg5Jj8A8v0AUA9ARGTQxAfA\n4r7A+kRQEZFzTHwApPPxLCBXAIiInGPiAyBTjHsA2hRGRORcEx8A5XyWqudo17QtpIjIoIkPgP4H\nwqkHICJyrokPgHIuTdVzCgARkSUmPgD6PQDXQjARkXOsGgBmdrmZfcXMnjOzo2b2e6H8w2b2YzN7\nJjxuGXjN3WY2Z2bPm9mNA+U3hbI5M7tra5p0rv7G8K51ACIi51h1U3igA3zA3b9pZlPA02Z2ODx3\nn7v/8eDJZnYlcBtwFfB64Mtm9ovh6T8FfgM4BjxlZofc/Xub0ZDllHMRr3hB+wKLiCyxagC4+wng\nRDheMLPngMtWeMmtwCPu3gReMrM54Nrw3Jy7vwhgZo+Ec7c0AIrZNFXypNuntvLHiIhccNY0BmBm\n+4BrgG+EojvN7Fkze8jMdoeyy4BXBl52LJQtV76lFvcF1sbwIiLnGDkAzKwMfAF4v7ufAe4HfgG4\nmriH8Mn+qUNe7iuUL/05t5vZETM7cvLkyVGrt6z+IHCkjeFFRM4xUgCYWYb4zf+z7v5XAO7+E3fv\nunsP+HPO3uY5Blw+8PK9wPEVys/h7g+4+wF3PzA7O7vW9pwnk07RSBXI9urQ6234eiIik2KUWUAG\nPAg85+5/MlB+6cBpvwl8NxwfAm4zs5yZXQHsB54EngL2m9kVZpYlHig+tDnNWFknXYwPNBAsIrJo\nlFlAbwF+B/iOmT0Tyj4EvNvMria+jfMy8LsA7n7UzB4lHtztAHe4exfAzO4EHgfSwEPufnQT27Ks\nTlSCNvGeAP1PBxURSbhRZgF9jeH37x9b4TX3AvcOKX9spddtlW6mHwDqAYiI9E38SmAAz/Y3htfH\nQYiI9CUkALQrmIjIUokIAMv1ewAKABGRvkQEQCqnHoCIyFKJCIB0IQSAxgBERBYlIgAyIQD0kdAi\nImclIgCyIQA6dW0LKSLSl4gAKOczVDxPW7uCiYgsSkQA9DeF6dYVACIifYkIgGI2ouLaGF5EZFAi\nAqAcegBaByAiclYiAqCUS1P1ArTUAxAR6UtEAJRzERXyWEubwoiI9CUiAEq5iBp5Um3dAhIR6UtM\nAFQ9T6R9gUVEFiUjALJpKhSIurVxV0VEZMdIRABE6RTNVIFMrwG97rirIyKyIyQiAADa6VJ8oE8E\nFREBEhQAnUwIAK0FEBEBEhQAvYx6ACIig1YNADO73My+YmbPmdlRM/u9UL7HzA6b2Qvh6+5Qbmb2\nKTObM7NnzexNA9c6GM5/wcwObl2zzucZ7QomIjJolB5AB/iAu/8ScD1wh5ldCdwFPOHu+4EnwvcA\nNwP7w+N24H6IAwO4B7gOuBa4px8a2yLX7wFoNbCICIwQAO5+wt2/GY4XgOeAy4BbgYfDaQ8D7wjH\ntwKf8djXgV1mdilwI3DY3U+5+2vAYeCmTW3NCqy/LaR6ACIiwBrHAMxsH3AN8A3gEnc/AXFIAK8L\np10GvDLwsmOhbLnybXF2X2AtBhMRgTUEgJmVgS8A73f3lbbWsiFlvkL50p9zu5kdMbMjJ0+eHLV6\nq0oXpuMD3QISEQFGDAAzyxC/+X/W3f8qFP8k3NohfH01lB8DLh94+V7g+Arl53D3B9z9gLsfmJ2d\nXUtbVhRpX2ARkXOMMgvIgAeB59z9TwaeOgT0Z/IcBL40UP6eMBvoemA+3CJ6HLjBzHaHwd8bQtm2\nyBXKdN1o17QvsIgIQDTCOW8Bfgf4jpk9E8o+BHwceNTM3gf8CHhXeO4x4BZgDqgB7wVw91Nm9jHg\nqXDeR9391Ka0YgSlfIYqeaLGGbLb9UNFRHawVQPA3b/G8Pv3AG8fcr4DdyxzrYeAh9ZSwc1SzqWp\nUqCsfYFFRIAErQQuZSNqnqOnfYFFRIAEBUC8K1hBg8AiIkFiAqC/KYw+C0hEJJasAKCAKQBERIBE\nBUCaCnlS2hZSRARIVACEfYE7CgAREUhSAGTjQeCM9gUWEQESFADplNFKFYl6Teh2xl0dEZGxS0wA\nAHSiYnygD4QTEUlWAHQj7QssItKXrABY3BdYA8EiIokKAM+GfYG1FkBEJKEB0NQYgIhIogJgcV9g\n9QBERJIVAOm8NoYXEelLVgAU1AMQEelLVABkwsbw2hNARCRhAZAvFOm60WloX2ARkUQFQLwvcIGO\nNoYXEUlWAMS7guXpNDQGICKyagCY2UNm9qqZfXeg7MNm9mMzeyY8bhl47m4zmzOz583sxoHym0LZ\nnJndtflNWV0xG1H1Aj2tAxARGakH8GngpiHl97n71eHxGICZXQncBlwVXvNnZpY2szTwp8DNwJXA\nu8O526qUS1MljysARERWDwB3/3vg1IjXuxV4xN2b7v4SMAdcGx5z7v6iu7eAR8K526qci6h4Hmvq\ns4BERDYyBnCnmT0bbhHtDmWXAa8MnHMslC1Xvq0W9wVuawxARGS9AXA/8AvA1cAJ4JOh3Iac6yuU\nn8fMbjezI2Z25OTJk+us3nDlXESVPGkFgIjI+gLA3X/i7l137wF/TnyLB+K/7C8fOHUvcHyF8mHX\nfsDdD7j7gdnZ2fVUb1ln9wXWtpAiIusKADO7dODb3wT6M4QOAbeZWc7MrgD2A08CTwH7zewKM8sS\nDxQfWn+116eYSVOloI3hRUSAaLUTzOwvgbcCF5vZMeAe4K1mdjXxbZyXgd8FcPejZvYo8D2gA9zh\n7t1wnTuBx4E08JC7H9301qwilTJaqQKRt6HTgii73VUQEdkxVg0Ad3/3kOIHVzj/XuDeIeWPAY+t\nqXZboB2VoEf8gXDRnnFXR0RkbBK1Ehigm9GuYCIikMgA0MbwIiKQwABw9QBERIAEBoDl+j0AfRyE\niCRbAgNAu4KJiEACAyClfYFFRIAEBkBmcV9gLQYTkWRLXACk+/sCawxARBIucQFQyBdpe5p2XdtC\nikiyJS4A4n2B83QUACKScMkLgFyaCgW6dd0CEpFkS1wAlHMRNc9pDEBEEi9xAdDfFUzTQEUk6RIX\nAP19gRUAIpJ0iQuAs/sCax2AiCRb8gIgmw77AisARCTZkhcA4RaQtoUUkaRLXAAUs/G+wJmuAkBE\nki1xAWBmtNNF0t6BTnPc1RERGZvEBQBAJyrGB5oJJCIJtmoAmNlDZvaqmX13oGyPmR02sxfC192h\n3MzsU2Y2Z2bPmtmbBl5zMJz/gpkd3JrmjGZxW8iWFoOJSHKN0gP4NHDTkrK7gCfcfT/wRPge4GZg\nf3jcDtwPcWAA9wDXAdcC9/RDYxx6/W0h1QMQkQRbNQDc/e+BU0uKbwUeDscPA+8YKP+Mx74O7DKz\nS4EbgcPufsrdXwMOc36obBvtCywisv4xgEvc/QRA+Pq6UH4Z8MrAecdC2XLl45FTAIiIbPYgsA0p\n8xXKz7+A2e1mdsTMjpw8eXJTK7f4M3LaFlJEZL0B8JNwa4fw9dVQfgy4fOC8vcDxFcrP4+4PuPsB\ndz8wOzu7zuqtLFXQxvAiIusNgENAfybPQeBLA+XvCbOBrgfmwy2ix4EbzGx3GPy9IZSNRSYfbwup\nHoCIJFm02glm9pfAW4GLzewY8WyejwOPmtn7gB8B7wqnPwbcAswBNeC9AO5+ysw+BjwVzvuouy8d\nWN42/Y3hu40zpMdVCRGRMVs1ANz93cs89fYh5zpwxzLXeQh4aE212yL5QoGWp+nVFxQAIpJYiVwJ\nXA4fCd3VvsAikmCJDIB4T4A83YZWAotIciU0ANJUvEBPg8AikmDJDIBs3ANwBYCIJFgyAyAXUfU8\npnUAIpJgiQyAci6iQoGUAkBEEiyRAVDKRdTJkurWx10VEZGxSWQAlHMRHY+g2xl3VURExiaRAZDP\npOhaGnMFgIgkVyIDwMwgnSHVa4+7KiIiY5PIAACwVEY9ABFJtOQGQJQhrQAQkQRLbACk0hlS3h13\nNURExia5ARBlSdMDH7oxmYjIxEtsAKSjTHzQ1UCwiCRTYgMgyoQA0EwgEUmoxAZAOsrGB+oBiEhC\nJTYAokwIgJ5mAolIMiU+ANrt5phrIiIyHgkOgBwAtXpjzDURERmPVTeFX4mZvQwsAF2g4+4HzGwP\n8DlgH/Ay8C/c/TUzM+A/AbcANeBfufs3N/LzNyKbjXsA3z/0SZjZi+WmiApTZArTZArT5EpT5Eq7\nKJZnKJSnyeWL46qqiMiW2FAABL/m7j8d+P4u4Al3/7iZ3RW+/yBwM7A/PK4D7g9fx2L3G66k9kyO\n6058Fk6sfn7L09SsQIMCjVSBZqpIK12kExXpRCV6mRKeLePZEpabIpWfIgqPbHGabGmaXDEOk+LU\nLnK5ApZKbAdMRHaAzQiApW4F3hqOHwa+ShwAtwKfcXcHvm5mu8zsUncf4e138/2jX/01/Jr/R7PV\noLYwT70yT7M2T7N6hlbtDJ36GTqNCr3GAjQreGuBVKtKql0l3akSdWtkOzXK7Z+R79XI06DkdbI2\n2qBy29PULU8tBEorVaCVLtJOl+hGRbqZEr1sGbJlLFcmlZsiXTjbS8kVp8mXZ8iXpimWd5EvlBQo\nIrImGw0AB/6nmTnwX9z9AeCS/pu6u58ws9eFcy8DXhl47bFQNpYAALBUily+SC5fZPfspZtyzVaz\nQb0yT61ymkb1DM3qPO36Qhwo9QV6jYV4M/pWhVSrgrVrRJ0KUadGtluj2D5N3usUvE7R6+RstGmq\nXTdqlqdOgXqqSDNVpJ0q0IriQOllSvQyZXwxUMqkClNkClNkCjNki1PkSjMUyjMUy9MUitMKFJEJ\nt9EAeIu7Hw9v8ofN7PsrnGtDys77HAYzux24HeANb3jDBqu3/bK5PNlcnpmLLtmU67VbTWqVM9Qr\np2lWz9CoztOqLdCun6HbODdQLIRK1KmSDoEy3TxBvl4j7w2KXqdgrZF+bs+NKnlqVqBpeRr9W17p\nIu2oRDdTwjMlyJYhV8ZyU6TzZaIwhpItTZMvTpEv74pDpTRNKp3elP8mIrI5NhQA7n48fH3VzL4I\nXAv8pH9rx8wuBV4Npx8DLh94+V7g+JBrPgA8AHDgwIHEf1BPJptjZs8sM3tmN+V6nXaLWnWBeuU0\njco8zVp8y6tdiwOl21jAmxXo91L6t7w6VTKdGqXWSfKNH5IPPZSijT6NtuY5alagbkWai7e84jGU\nblSklw09lDCOks5PERWmiQplssWZxR5KvjRNqTxDOtqKO5giybHu/4PMrASk3H0hHN8AfBQ4BBwE\nPh6+fim85BBwp5k9Qjz4Oz+u+/9JFmWyTO+6iOldF23K9bqdDrXqGeqVeRrVeAylWZunU1ugsxgo\nC3izGvdQ2hXS7biHkulWKbV+Sq7xymKglGz0abk1z1G3PHWLB+WbqSLtdCEOlMzZgXnLlrH8FKlc\nv4cSD8znitPkyjMUyrsolafPLg4USYiN/Al1CfDFeHYnEfDf3P1vzOwp4FEzex/wI+Bd4fzHiKeA\nzhFPA33vBn627BDpKGJqZg9TM3s25Xq9bpd6bYH6wjz1ajyO0r/l1amfodeo0GvGvRRrLmCdGul2\nv4dSpdg5Ta51nHwvHkcp0SBlo3UkG54JPZQCTSvQDIPyS2d6kS2Ryk+RClOHo8IUmeI0+dIMueIU\nxfIuilO7yGRzm/LfRGSrmO/gj0M+cOCAHzlyZNzVkAuY93rUawvUKvM0Kv0xlDO06/N06pXFcRRv\nVeNAaVdJtyuhhxKPo+R6dfK9GgXqlLxOesRAaXlEdTFQwm2vqEgnXaKbKdKLwkyvXNxLSeUH16JM\nkStNx2tRStMUpma0FkVGZmZPu/uB1c7TTVSZaJZKUSzPUCzPbMr1vNej0ahRXThNozpPozJPq76w\nOHW416gs3vaKx1BqpNoVonY8dTjXqTDdepV8tU6BOkVvkLHRNiYathalnS7QjkqLPZRepgy5MIaS\nK5PKn73l1e+laC2K9CkARNbAUinyxTL5Ypl4HsPGeK9Ho1mntnCaRnUh7qFU41CJ16IshLUo1bAW\nJQ6VdLjlle3WKLVPLfZQil4nO2KgdDxFzQrUKNBMFQYG5s9di2Khl7K4FiUf3/Lqr0XJFacpTWkt\nyoVIASAyRpZKkS+UyBdKm3bNVrNBbeE0tTDLq1mdp107E6YOV8LU4XiBY6odFjeGHkocKKfJeY1C\nmDq8prUoxIPyw9aixFOHl1mLkg+r5cNMr0JpmmJJa1G2mgJAZMLEa1F+jl0X/9ymXK/dalJbOE09\nrENpVOdp1ypxoNTP0Gsu0GtWobkQZnrFg/JRmOnVX4vSX9yYHzFQlluLsjh1OKxF6QfKsLUoueIU\nBa1FWZYCQERWlMnmmLnokk1b3Nhpt6gOLG5s1s7QCivmF9eiNBagVQ3jKJXFHkqmU2Oq9Sq5xtnF\njZuzFqVINwzKr7YWJV+aClOHL/y1KBd27UXkghNlsszsvpiZ3RdvyvUG16LUK/M0q/O06mfitShh\nxby3KvHU4f7ixv7U4W4trEWpUwi3vTayFqX/mV7D16KUw9Th6fARLFPx1OExrkVRAIjIBW0r1qIM\nLm5sVM/QqsZjKJ3GAt16WNx4ztThfg+lSrH92uJalKLXKa5jLUrDCpwoX8WvfuCLm9Km5SgAREQG\npNJpytO7KU/v3pTr9bpdavUKtcEeSm2Bdj2+7dULA/P9Hkp/LUp7auOzzFajABAR2UKpdHpT16Js\nJs2xEhFJKAWAiEhCKQBERBJKASAiklAKABGRhFIAiIgklAJARCShFAAiIgm1o3cEM7OTwA83cImL\ngZ9uUnV2MrVzsiSlnZCctm53O/+Bu8+udtKODoCNMrMjo2yLdqFTOydLUtoJyWnrTm2nbgGJiCSU\nAkBEJKEmPQAeGHcFtonaOVmS0k5ITlt3ZDsnegxARESWN+k9ABERWcYFGQBmdpOZPW9mc2Z215Dn\nc2b2ufD8N8xs38Bzd4fy583sxu2s91qtt51m9htm9rSZfSd8fdt2132tNvI7Dc+/wcwqZvb721Xn\n9djgv903mtn/MbOj4Xeb3866r8UG/u1mzOzh0L7nzOzu7a77WozQzn9qZt80s46ZvXPJcwfN7IXw\nOLh9tR7g7hfUA0gDPwB+HsgC3wauXHLOvwX+czi+DfhcOL4ynJ8DrgjXSY+7TVvQzmuA14fjXwZ+\nPO72bFVbB57/AvDfgd8fd3u26HcaAc8CvxK+v2hC/+3+NvBIOC4CLwP7xt2mDbRzH/BG4DPAOwfK\n9wAvhq+7w/Hu7W7DhdgDuBaYc/cX3b0FPALcuuScW4GHw/HngbebmYXyR9y96e4vAXPhejvRutvp\n7t9y9+Oh/CiQN7PcttR6fTbyO8XM3kH8P9DRbarvem2knTcAz7r7twHc/Wfu3t2meq/VRtrpQMnM\nIqAAtIAz21PtNVu1ne7+srs/C/SWvPZG4LC7n3L314DDwE3bUelBF2IAXAa8MvD9sVA29Bx37wDz\nxH8xjfLanWIj7Rz0W8C33L25RfXcDOtuq5mVgA8CH9mGem7URn6nvwi4mT0ebin8u22o73ptpJ2f\nB6rACeBHwB+7+6mtrvA6beT9ZEe8F12IewLbkLKlU5mWO2eU1+4UG2ln/KTZVcAniP963Mk20taP\nAPe5eyV0CHayjbQzAv4J8GagBjxhZk+7+xObW8VNsZF2Xgt0gdcT3xr5X2b2ZXd/cXOruCk28n6y\nI96LLsQewDHg8oHv9wLHlzsndCVngFMjvnan2Eg7MbO9wBeB97j7D7a8thuzkbZeB/yRmb0MvB/4\nkJndudUVXqeN/tv9O3f/qbvXgMeAN215jddnI+38beBv3L3t7q8C/xvYcR+hEGzk/WRnvBeNeyBl\nHQMvEfH93is4O/By1ZJz7uDcAaZHw/FVnDsI/CI7dyBtI+3cFc7/rXG3Y6vbuuScD7OzB4E38jvd\nDXyTeGA0Ar4M/LNxt2kL2vlB4C+I/0IuAd8D3jjuNq23nQPnfprzB4FfCr/X3eF4z7a3Ydz/Edf5\nH/4W4P8Sj8D/YSj7KPDPw3GeeEbIHPAk8PMDr/3D8LrngZvH3ZataCfw74nvoz4z8HjduNuzVb/T\ngWvs6ADYaDuBf0k80P1d4I/G3ZataCdQDuVHw5v/H4y7LRts55uJ/9qvAj8Djg689l+H9s8B7x1H\n/bUSWEQkoS7EMQAREdkECgARkYRSAIiIJJQCQEQkoRQAIiIJpQAQEUkoBYCISEIpAEREEur/A/bB\nRH1pCcs7AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x9e49c50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.plot(x,ys[1,::-1])\n",
+    "plt.plot(x, y2s[1,::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3546.9000000000015"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(ys[1])"
    ]
   },
   {
@@ -2377,7 +2444,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y1 = ys[1]\n",
