--- a/Python Analysis/Clean_Vapor Tube Analysis-excimer_power.ipynb
+++ b/Python Analysis/Clean_Vapor Tube Analysis-excimer_power.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -19,6 +19,8 @@
     "import pandas as pd\n",
     "%matplotlib inline\n",
     "\n",
+    "import scipy\n",
+    "\n",
     "mpl.rcParams.update({'font.size': 14})\n",
     "\n",
     "\n",
@@ -32,37 +34,21 @@
     "    idx = np.abs(a - a0).argmin()\n",
     "    return idx\n",
     "    \n",
-    "    \n"
+    "def exp_fit(x,a)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run15kV_Rb_NDF00_int.tdms                         C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF00_int_2.tdms                       C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF00_reprate_10Hz.tdms                C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF00_reprate_10Hz_2.tdms              C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF00_reprate_20Hz.tdms                C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF00_reprate_50Hz_4.tdms              C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF00_seq_3.tdms                       C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF00_seq_3_500ns.tdms                 C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF00_seq_3_500ns_2.tdms               C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF02_reprate_100Hz.tdms               C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF02_reprate_10Hz.tdms                C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF02_reprate_20Hz.tdms                C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF02_reprate_50Hz.tdms                C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF02_seq_500ns.tdms                   C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF02_seq_500ns_500aq.tdms             C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "Run15kV_Rb_NDF02_seq_500ns_500aq_newbg.tdms       C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "_Run15kV_Rb_NDF00_seq_500ns_500aq.tdms            C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "_Run15kV_Rb_NDF01_seq_500ns_500aq.tdms            C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
-      "_Run15kV_Rb_NDF02_seq_500ns_500aq_newbg_2.tdms    C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
+      "Run15kV_Powermeter_NDF00_seq_500ns_500aq.tdms    C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
+      "Run15kV_Powermeter_NDF01_seq_500ns_500aq.tdms    C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
+      "Run15kV_Powermeter_NDF02_seq_500ns_500aq.tdms    C:\\Users\\aspit\\OneDrive\\Data\\2018-04-05 Power ...\n",
       "dtype: object\n"
      ]
     }
@@ -73,21 +59,21 @@
     "\n",
     "f10Hz = VaporTubes()\n",
     "f50Hz = VaporTubes()\n",
+    "p10Hz = VaporTubes()\n",
     "\n",
     "f10Hz.set_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2018-04-05 Power dependence\\\\Try 1\")\n",
     "\n",
     "f50Hz.set_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2018-04-05 Power dependence\\\\Seqtry2\")\n",
     "\n",
+    "p10Hz.set_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2018-04-05 Power dependence\\\\Powermeter\\\\Chosen\\\\10Hz\")\n",
     "\n",
-    "print(f10Hz.pathnames)"
+    "print(p10Hz.pathnames)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "f10Hz.import_data(f10Hz.pathnames['_Run15kV_Rb_NDF00_seq_500ns_500aq.tdms'])\n",
@@ -97,6 +83,13 @@
     "NDF01_10Hz = f10Hz.imports[f10Hz.pathnames['_Run15kV_Rb_NDF01_seq_500ns_500aq.tdms']]\n",
     "NDF02_10Hz = f10Hz.imports[f10Hz.pathnames['_Run15kV_Rb_NDF02_seq_500ns_500aq_newbg_2.tdms']]\n",
     "\n",
+    "p10Hz.import_data(p10Hz.pathnames['Run15kV_Powermeter_NDF00_seq_500ns_500aq.tdms'])\n",
+    "p10Hz.import_data(p10Hz.pathnames['Run15kV_Powermeter_NDF01_seq_500ns_500aq.tdms'])\n",
+    "p10Hz.import_data(p10Hz.pathnames['Run15kV_Powermeter_NDF02_seq_500ns_500aq.tdms'])\n",
+    "p_NDF00_10Hz = p10Hz.imports[p10Hz.pathnames['Run15kV_Powermeter_NDF00_seq_500ns_500aq.tdms']]\n",
+    "p_NDF01_10Hz = p10Hz.imports[p10Hz.pathnames['Run15kV_Powermeter_NDF01_seq_500ns_500aq.tdms']]\n",
+    "p_NDF02_10Hz = p10Hz.imports[p10Hz.pathnames['Run15kV_Powermeter_NDF02_seq_500ns_500aq.tdms']]\n",
+    "\n",
     "filepath_laser = laserprofile.pathnames[0]\n",
     "laserprofile.import_data(filepath_laser)\n",
     "file_laser = laserprofile.imports[filepath_laser]"
@@ -104,34 +97,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Common',\n",
-       " 'Wavelength Array',\n",
-       " 'Gate Delay Arrays',\n",
-       " 'Integrated Emission',\n",
-       " 'Raw_1']"
+       "['Meter 1', 'Meter 2']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "NDF00_10Hz.groups()"
+    "p_NDF00_10Hz.groups()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Pull in relevant groups\n",
@@ -143,18 +130,24 @@
     "NDF00_10Hz_time = NDF00_10Hz_time[~np.isnan(NDF00_10Hz_time)]\n",
     "NDF00_10Hz_time = NDF00_10Hz_time - offset_time\n",
     "NDF00_10Hz_data = f10Hz.get_data_pdframe(NDF00_10Hz,'Raw_1')\n",
+    "NDF00_10Hz_power = p10Hz.get_data_pdframe(p_NDF00_10Hz,'Meter 1')\n",
+    "NDF00_10Hz_power = NDF00_10Hz_power['Power'].as_matrix()\n",
     "\n",
     "NDF01_10Hz_time = f10Hz.get_data_pdframe(NDF01_10Hz,'Gate Delay Arrays')\n",
     "NDF01_10Hz_time = NDF01_10Hz_time['GateDelay_1'].as_matrix()\n",
     "NDF01_10Hz_time = NDF01_10Hz_time[~np.isnan(NDF01_10Hz_time)]\n",
     "NDF01_10Hz_time = NDF01_10Hz_time - offset_time\n",
     "NDF01_10Hz_data = f10Hz.get_data_pdframe(NDF01_10Hz,'Raw_1')\n",
+    "NDF01_10Hz_power = p10Hz.get_data_pdframe(p_NDF01_10Hz,'Meter 1')\n",
+    "NDF01_10Hz_power = NDF01_10Hz_power['Power'].as_matrix()\n",
     "\n",
     "NDF02_10Hz_time = f10Hz.get_data_pdframe(NDF02_10Hz,'Gate Delay Arrays')\n",
     "NDF02_10Hz_time = NDF02_10Hz_time['GateDelay_1'].as_matrix()\n",
     "NDF02_10Hz_time = NDF02_10Hz_time[~np.isnan(NDF02_10Hz_time)]\n",
     "NDF02_10Hz_time = NDF02_10Hz_time - offset_time\n",
     "NDF02_10Hz_data = f10Hz.get_data_pdframe(NDF02_10Hz,'Raw_1')\n",
+    "NDF02_10Hz_power = p10Hz.get_data_pdframe(p_NDF02_10Hz,'Meter 1')\n",
+    "NDF02_10Hz_power = NDF02_10Hz_power['Power'].as_matrix()\n",
     "\n",
     "wl = f10Hz.get_data_pdframe(NDF00_10Hz,'Wavelength Array')\n",
     "wavelength = wl['Wavelength_1'].as_matrix()\n",
@@ -172,6 +165,153 @@
     "#timearrays = Run3.get_data_pdframe(file1,'Gate Delay Arrays')\n",
     "\n",
     "#df1 = Run3.get_data_pdframe(file1,'Raw_Capture_1')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2936\n",
+      "3500\n",
+      "      Frame_0  Frame_1  Frame_2  Frame_3  Frame_4  Frame_5  Frame_6  Frame_7  \\\n",
+      "0       199.0   8238.0    -40.0    232.0    348.0   -164.0     67.0     25.0   \n",
+      "1       176.0   8102.0   -490.0    191.0    230.0    -13.0   -139.0     31.0   \n",
+      "2        15.0   9018.0    -26.0    172.0    -51.0    488.0    157.0    344.0   \n",
+      "3       633.0  11806.0     43.0     39.0    113.0   -186.0   -144.0    -18.0   \n",
+      "4       270.0  13007.0      0.0    101.0    508.0    212.0     93.0    348.0   \n",
+      "5        16.0  11859.0    363.0     18.0    173.0    283.0   -179.0    -60.0   \n",
+      "6       595.0  11605.0    798.0    211.0    345.0    657.0    344.0     18.0   \n",
+      "7       950.0   9583.0   1164.0    442.0    655.0    857.0    -42.0    492.0   \n",
+      "8      -259.0   6936.0    -81.0     45.0   -267.0    135.0    176.0     43.0   \n",
+      "9       404.0   7937.0     23.0    113.0    356.0    465.0     18.0     86.0   \n",
+      "10      -43.0   9142.0    461.0    -82.0     64.0    314.0   -318.0     23.0   \n",
+      "11      -55.0  10409.0   -443.0    282.0     53.0    -55.0   -135.0   -242.0   \n",
+      "12       51.0  10492.0     76.0    190.0     33.0    -33.0    371.0    167.0   \n",
+      "13      254.0  10582.0    382.0   -147.0     20.0     63.0    321.0    180.0   \n",
+      "14      142.0  10794.0   -206.0    152.0     85.0    134.0    -38.0   -444.0   \n",
+      "15      -41.0  12371.0     14.0     -6.0    205.0   -102.0    -64.0     63.0   \n",
+      "16      -82.0  12112.0     72.0    181.0    102.0   -236.0    187.0      2.0   \n",
+      "17      552.0  11156.0    196.0    457.0    -16.0    256.0   -152.0    295.0   \n",
+      "18      978.0  11231.0    615.0    605.0    310.0    -11.0    280.0     72.0   \n",
+      "19       54.0   8880.0   -334.0   -307.0    -81.0    -43.0   -135.0     13.0   \n",
+      "20      450.0   7895.0    324.0    348.0    429.0    596.0    256.0    413.0   \n",
+      "21      181.0   8371.0    -43.0    102.0   -161.0    369.0     44.0   -126.0   \n",
+      "22     -133.0   9819.0    -47.0   -261.0   -594.0   -378.0    -69.0   -483.0   \n",
+      "23      252.0   9231.0     46.0    -76.0    319.0   -171.0    445.0    278.0   \n",
+      "24      266.0   9296.0   -245.0    207.0    441.0    377.0    167.0    166.0   \n",
+      "25     -186.0   8720.0   -215.0    356.0    177.0     90.0     71.0   -313.0   \n",
+      "26       43.0  10277.0    160.0     49.0    329.0    390.0    353.0    527.0   \n",
+      "27      136.0   8802.0    122.0     39.0      5.0    146.0    761.0    319.0   \n",
+      "28      485.0   9055.0    152.0   -200.0   -229.0    177.0     49.0   -184.0   \n",
+      "29      302.0  10059.0    110.0    443.0    112.0    290.0     12.0     15.0   \n",
+      "...       ...      ...      ...      ...      ...      ...      ...      ...   \n",
+      "994     182.0  11158.0    348.0    180.0    491.0    317.0      8.0    425.0   \n",
+      "995     724.0  10861.0    368.0    664.0    583.0    469.0    424.0    587.0   \n",
+      "996      55.0  11090.0    191.0    340.0    472.0    163.0     94.0    169.0   \n",
+      "997     365.0  10532.0    200.0    184.0    197.0   -103.0    -35.0     69.0   \n",
+      "998     574.0  11751.0    262.0    123.0    -40.0   -235.0    263.0    171.0   \n",
+      "999    -322.0  13591.0    284.0    379.0    136.0     -9.0    530.0    189.0   \n",
+      "1000    172.0  16776.0    387.0    423.0    -35.0    -47.0    320.0    537.0   \n",
+      "1001    456.0  15610.0    400.0    534.0    236.0    135.0     93.0    379.0   \n",
+      "1002   -104.0  13157.0     55.0    482.0   -361.0    264.0     16.0    311.0   \n",
+      "1003    434.0  13456.0    257.0    155.0   -296.0    288.0    294.0    536.0   \n",
+      "1004   -321.0  14461.0    234.0    270.0   -277.0    440.0    109.0    126.0   \n",
+      "1005    120.0  16167.0    893.0    759.0    350.0    672.0    470.0   1168.0   \n",
+      "1006     40.0  17346.0   1169.0    558.0    435.0   1185.0    422.0    328.0   \n",
+      "1007   -100.0  18204.0    561.0    700.0    381.0    666.0   1036.0    852.0   \n",
+      "1008    280.0  19696.0    387.0    873.0    128.0    563.0    283.0    626.0   \n",
+      "1009    243.0  18201.0    630.0   1088.0    214.0    301.0    682.0   1375.0   \n",
+      "1010    272.0  16946.0    955.0    999.0    141.0    638.0    603.0   1018.0   \n",
+      "1011    295.0  20855.0    910.0    930.0    350.0    225.0    645.0    654.0   \n",
+      "1012   -521.0  24695.0    393.0   1156.0   -156.0   1028.0    563.0    873.0   \n",
+      "1013    193.0  24770.0    493.0   1065.0    -18.0    463.0    322.0    901.0   \n",
+      "1014    572.0  26039.0    906.0   1268.0    772.0    247.0    326.0    305.0   \n",
+      "1015    248.0  25869.0    654.0   1154.0    909.0    556.0    436.0    436.0   \n",
+      "1016     97.0  25534.0    394.0    546.0    599.0    225.0     43.0    458.0   \n",
+      "1017   -287.0  28647.0    556.0    641.0    367.0    508.0     38.0    -54.0   \n",
+      "1018    243.0  26149.0    343.0     33.0     13.0     60.0    -11.0    109.0   \n",
+      "1019    -61.0  23477.0   -210.0   -203.0    253.0    178.0   -121.0    182.0   \n",
+      "1020    -38.0  26535.0   1521.0    837.0   1893.0    967.0    891.0   1778.0   \n",
+      "1021    359.0  25083.0   1086.0   1130.0   1510.0    869.0    674.0   1458.0   \n",
+      "1022    243.0  21649.0    758.0   1156.0    707.0    348.0    701.0    678.0   \n",
+      "1023    490.0  22689.0    866.0    690.0    915.0    641.0    608.0    882.0   \n",
+      "\n",
+      "      Frame_8  Frame_9  \n",
+      "0      -356.0   -369.0  \n",
+      "1        49.0    -82.0  \n",
+      "2      -268.0    197.0  \n",
+      "3       164.0     89.0  \n",
+      "4      -133.0    -70.0  \n",
+      "5       273.0   -165.0  \n",
+      "6        37.0    524.0  \n",
+      "7        41.0   -192.0  \n",
+      "8       472.0     -6.0  \n",
+      "9       350.0   -195.0  \n",
+      "10      103.0   -174.0  \n",
+      "11     -330.0   -221.0  \n",
+      "12      109.0   -201.0  \n",
+      "13      564.0    408.0  \n",
+      "14      -77.0     -9.0  \n",
+      "15      -22.0     83.0  \n",
+      "16      145.0    -39.0  \n",
+      "17      178.0   -124.0  \n",
+      "18      -95.0   -115.0  \n",
+      "19     -520.0   -597.0  \n",
+      "20      101.0    452.0  \n",
+      "21      308.0    443.0  \n",
+      "22     -305.0   -928.0  \n",
+      "23       40.0   -214.0  \n",
+      "24      245.0    260.0  \n",
+      "25     -301.0    -78.0  \n",
+      "26     -248.0     74.0  \n",
+      "27       83.0     98.0  \n",
+      "28      115.0     41.0  \n",
+      "29       64.0    125.0  \n",
+      "...       ...      ...  \n",
+      "994     275.0     34.0  \n",
+      "995     894.0    755.0  \n",
+      "996     279.0   -207.0  \n",
+      "997    -213.0   -275.0  \n",
+      "998     233.0    526.0  \n",
+      "999      10.0    394.0  \n",
+      "1000    458.0    271.0  \n",
+      "1001    397.0    655.0  \n",
+      "1002    -15.0    284.0  \n",
+      "1003    300.0    252.0  \n",
+      "1004    275.0   -191.0  \n",
+      "1005   1292.0    501.0  \n",
+      "1006    610.0    214.0  \n",
+      "1007    636.0    315.0  \n",
+      "1008    197.0    305.0  \n",
+      "1009    609.0    304.0  \n",
+      "1010    359.0    422.0  \n",
+      "1011    708.0    279.0  \n",
+      "1012    -18.0   -531.0  \n",
+      "1013    437.0    512.0  \n",
+      "1014   1402.0    734.0  \n",
+      "1015   1357.0    429.0  \n",
+      "1016    735.0    528.0  \n",
+      "1017    474.0    829.0  \n",
+      "1018    157.0    370.0  \n",
+      "1019    -51.0   -118.0  \n",
+      "1020   1075.0   1291.0  \n",
+      "1021    965.0   1222.0  \n",
+      "1022    878.0    548.0  \n",
+      "1023    695.0    242.0  \n",
+      "\n",
+      "[1024 rows x 10 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(NDF02_10Hz_power))\n",
+    "print(len(NDF02_10Hz_data.columns)*500)\n",
+    "print(NDF01_10Hz_data)"
    ]
   },
   {
@@ -464,7 +604,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(time_off)"
