Make power dependence notebook compatible with library and introduce dataframe file structure. Got rid of the alternative power normalization methods.

--- a/Python Analysis/Jupyter Notebooks/TRPL/Vaportubes.ipynb
+++ b/Python Analysis/Jupyter Notebooks/TRPL/Vaportubes.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -73,20 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "peak1_max, wl_peak1 = MHDpy.analysis.PL_peakmax(data, wavelength, 778,780.5)\n",
-    "peak2_max, wl_peak2 = MHDpy.analysis.PL_peakmax(data, wavelength, 792,796)"
+    "peak1_max, wl_peak1, data_cut = MHDpy.analysis.PL_peakmax(data, wavelength, 778,780.5)\n",
+    "peak2_max, wl_peak2, data_cut = MHDpy.analysis.PL_peakmax(data, wavelength, 792,796)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "offset_time = 870\n",
