--- a/Python Analysis/Jupyter Notebooks/TRPL/Vaportubes_power_new.ipynb
+++ b/Python Analysis/Jupyter Notebooks/TRPL/Vaportubes_power_new.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "###Paths###\n",
@@ -66,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "###Groups and Channels###\n",
@@ -80,8 +84,6 @@
     "\n",
     "data_50Hz = pd.DataFrame(index = {'NDF00','NDF01','NDF02'},\n",
     "                         columns = {'Data' , 'Time', 'Power','Power_avg','Data_p1_max', 'Data_p2_max', 'Data_p1_max_norm', 'Data_p2_max_norm'})\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "for index in files_50Hz.index:\n",
@@ -106,7 +108,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aq = 2000\n",
@@ -149,7 +153,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
