--- a/Python Analysis/Untitled1-Copy2.ipynb
+++ b/Python Analysis/Untitled1-Copy2.ipynb
@@ -19,8 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "run1 = TF('Z:\\Test Data\\Raw Data\\Materials Testing\\\\2018-05-21\\Run 1_together.tdms')"
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -69,8 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f['motor'] = f['motor'] - min(f['motor'])\n",
@@ -79,27 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Float64Index([        0.0,    0.272999,    0.528999,    0.780999,       1.033,\n",
-       "                 1.284999,    1.536999,       1.789,    2.040999,    2.292999,\n",
-       "              ...\n",
-       "              4504.438999,    4504.703, 4504.957999,     4505.21, 4505.461999,\n",
-       "              4505.713999,    4505.967, 4506.218999, 4506.470999,    4506.723],\n",
-       "             dtype='float64', length=17770)"
+       "323.90325978882055"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.index"
+    "xs = f.iloc[7700:12000]\n",
+    "np.max([xs['T_par_1'],xs['T_par_2'],xs['T_per_1'],xs['T_per_2']])"
    ]
   },
   {
