restructuring and change MHDpy importing
changed the file structure to move eventlog and post processing routines
to the MHDpy module. previously there as a snippet of code required in
each python file adding the repository path to sys.path. This was
problematic because the path would have to manually be updated. now the user runes setup.bat which will add
the current directory (repository path) to the site-packages of the
detected python installation. The bat file adds a '.pth' file which
simply adds the listed directories in the .pth file to sys.path anytime
the program is run. Also, the bat file installs requirements.txt. also
updated reademe.md

--- a/Analysis/Jupyter Notebooks/TRPL/Perovskite.ipynb
+++ b/Analysis/Jupyter Notebooks/TRPL/Perovskite.ipynb
@@ -9,7 +9,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['', 'C:\\\\Users\\\\aspit\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\python36.zip', 'C:\\\\Users\\\\aspit\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\DLLs', 'C:\\\\Users\\\\aspit\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\lib', 'C:\\\\Users\\\\aspit\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3', 'C:\\\\Users\\\\aspit\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\lib\\\\site-packages', 'C:\\\\Users\\\\aspit\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\aspit\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\aspit\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\aspit\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\aspit\\\\.ipython', 'C:\\\\Users\\\\aspit\\\\Git\\\\MHDLab\\\\Analysis\\\\Python Analysis']\n"
+      "XML Footer was not loaded prior to calling _get_wavelength or \n",
+      "XML Footer does not contain Wavelength Mapping information\n",
+      "Successfully loaded 1 file(s) in a SpeFile object\n",
+      "XML Footer was not loaded prior to calling _get_wavelength or \n",
+      "XML Footer does not contain Wavelength Mapping information\n",
+      "Successfully loaded 1 file(s) in a SpeFile object\n"
      ]
     }
    ],
@@ -25,10 +30,10 @@
     "import sys\n",
     "\n",
     "#Make sure Python Analysis folder in in PYTHONPATH and import the MHDpy module\n",
-    "PythonAnalysisPath = 'C:\\\\Users\\\\aspit\\\\Git\\\\MHDLab\\\\Analysis\\\\Python Analysis'\n",
-    "if not PythonAnalysisPath in sys.path:\n",
-    "    sys.path.append(PythonAnalysisPath)\n",
-    "print(sys.path)\n",
+    "#PythonAnalysisPath = 'C:\\\\Users\\\\aspit\\\\Git\\\\MHDLab\\\\Analysis\\\\Python Analysis'\n",
+    "#if not PythonAnalysisPath in sys.path:\n",
+    "#    sys.path.append(PythonAnalysisPath)\n",
+    "#print(sys.path)\n",
     "import MHDpy.importing as importing\n",
     "import MHDpy.plotting as plotting\n",
     "import MHDpy.analysis as analysis\n",
