replace MHD with mhd

--- a/Analysis/Jupyter Notebooks/TRPL/HVOF PL experiment.ipynb
+++ b/Analysis/Jupyter Notebooks/TRPL/HVOF PL experiment.ipynb
@@ -16,12 +16,12 @@
     "%matplotlib inline\n",
     "import sys\n",
     "\n",
-    "#Make sure Python Analysis folder in in PYTHONPATH and import the MHDpy module\n",
+    "#Make sure Python Analysis folder in in PYTHONPATH and import the mhdpy module\n",
     "PythonAnalysisPath = 'C:\\\\Users\\\\aspit\\\\Git\\\\MHDLab\\\\Python Analysis'\n",
     "if not PythonAnalysisPath in sys.path:\n",
     "    sys.path.append(PythonAnalysisPath)\n",
-    "import MHDpy.Importing\n",
-    "import MHDpy.plotting\n",
+    "import mhdpy.Importing\n",
+    "import mhdpy.plotting\n",
     "from nptdms import TdmsFile as TF\n",
     "\n",
     "import importlib\n",
@@ -36,8 +36,8 @@
    "outputs": [],
    "source": [
     "###Paths###\n",
-    "pathnames = MHDpy.Importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2018-10-06_cut\\\\Diadem analysis_smooth\", regExp= \".*\\.tdms$\")\n",
-    "laserprofile_pathnames= MHDpy.Importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2017-10-23\")\n",
+    "pathnames = mhdpy.Importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2018-10-06_cut\\\\Diadem analysis_smooth\", regExp= \".*\\.tdms$\")\n",
+    "laserprofile_pathnames= mhdpy.Importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2017-10-23\")\n",
     "\n",
     "###Files###\n",
     "file1 = TF(pathnames['Together_tdms.tdms'])\n",
@@ -53,7 +53,7 @@
     "\n",
     "###Channels###\n",
     "\n",
-    "#note that in this case the maximum of the peak was already accomplished in labview, hence no MHDpy.analysis stuff\n",
+    "#note that in this case the maximum of the peak was already accomplished in labview, hence no mhdpy.analysis stuff\n",
     "K_int_1 = Potassium['Peak1_max_seed_expt4_767_Potassium1'].as_matrix()\n",
     "K_int_2 = Potassium['Peak2_max_seed_expt4_770_Potassium1'].as_matrix()\n",
     "K_time = Potassium['GateTime'].as_matrix()\n",
@@ -146,15 +146,15 @@
     }
    ],
    "source": [
-    "importlib.reload(MHDpy.plotting)\n",
+    "importlib.reload(mhdpy.plotting)\n",
     "\n",
-    "PLplot = MHDpy.plotting.PLplot(L_int_norm, L_time_off, K_int_1_norm, K_int_2_norm, K_time_off)\n",
+    "PLplot = mhdpy.plotting.PLplot(L_int_norm, L_time_off, K_int_1_norm, K_int_2_norm, K_time_off)\n",
     "\n",
     "PLplot.fig.suptitle('HVOF Potassium PL', y = 1)\n",
     "\n",
     "PLplot.ax1.set_xlim(-20,60)\n",
     "\n",
-    "#MHDpy.plotting.PL(L_int_norm, L_time_off, K_int_1_norm, K_int_2_norm, K_time_off)"
+    "#mhdpy.plotting.PL(L_int_norm, L_time_off, K_int_1_norm, K_int_2_norm, K_time_off)"
    ]
   },
   {
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "MHDpy.plotting.spectral_anim(RawData_Frames, spectra_wl,spectra_time_off )"
+    "mhdpy.plotting.spectral_anim(RawData_Frames, spectra_wl,spectra_time_off )"
    ]
   }
  ],
