--- a/Analysis/Jupyter Notebooks/TRPL/Perovskite.ipynb
+++ b/Analysis/Jupyter Notebooks/TRPL/Perovskite.ipynb
@@ -29,15 +29,15 @@
     "%matplotlib inline\n",
     "import sys\n",
     "\n",
-    "#Make sure Python Analysis folder in in PYTHONPATH and import the MHDpy module\n",
+    "#Make sure Python Analysis folder in in PYTHONPATH and import the mhdpy module\n",
     "#PythonAnalysisPath = 'C:\\\\Users\\\\aspit\\\\Git\\\\MHDLab\\\\Analysis\\\\Python Analysis'\n",
     "#if not PythonAnalysisPath in sys.path:\n",
     "#    sys.path.append(PythonAnalysisPath)\n",
     "#print(sys.path)\n",
-    "import MHDpy.importing as importing\n",
-    "import MHDpy.plotting as plotting\n",
-    "import MHDpy.analysis as analysis\n",
-    "import MHDpy.SPEparse as SPEparse\n",
+    "import mhdpy.importing as importing\n",
+    "import mhdpy.plotting as plotting\n",
+    "import mhdpy.analysis as analysis\n",
+    "import mhdpy.SPEparse as SPEparse\n",
     "from nptdms import TdmsFile as TF\n",
     "\n",
     "import importlib\n",
@@ -201,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "<MHDpy.SPEparse.SpectraPlot at 0x2298df305f8>"
+       "<mhdpy.SPEparse.SpectraPlot at 0x2298df305f8>"
       ]
      },
      "execution_count": 5,
