--- a/Analysis/Jupyter Notebooks/TRPL/Vaportubes_power50Hz.ipynb
+++ b/Analysis/Jupyter Notebooks/TRPL/Vaportubes_power50Hz.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "#import TDMS_MHD as MHD\n",
     "\n",
-    "#Make sure Python Analysis folder in in PYTHONPATH and import the MHDpy module\n",
+    "#Make sure Python Analysis folder in in PYTHONPATH and import the mhdpy module\n",
     "PythonAnalysisPath = 'C:\\\\Users\\\\aspit\\\\Documents\\\\Git\\\\MHDLab\\\\Python Analysis'\n",
     "if not PythonAnalysisPath in sys.path:\n",
     "    sys.path.append(PythonAnalysisPath)\n",
-    "import MHDpy.old as MHD\n",
+    "import mhdpy.old as MHD\n",
     "\n",
     "import pandas as pd\n",
     "%matplotlib inline\n",
