--- a/Analysis/Jupyter Notebooks/TRPL/Vaportubes_power_new.ipynb
+++ b/Analysis/Jupyter Notebooks/TRPL/Vaportubes_power_new.ipynb
@@ -16,13 +16,13 @@
     "%matplotlib inline\n",
     "import sys\n",
     "\n",
-    "#Make sure Python Analysis folder in in PYTHONPATH and import the MHDpy module\n",
+    "#Make sure Python Analysis folder in in PYTHONPATH and import the mhdpy module\n",
     "PythonAnalysisPath = 'C:\\\\Users\\\\aspit\\\\Git\\\\MHDLab\\\\Analysis\\\\Python Analysis'\n",
     "if not PythonAnalysisPath in sys.path:\n",
     "    sys.path.append(PythonAnalysisPath)\n",
-    "import MHDpy.importing\n",
-    "import MHDpy.plotting\n",
-    "import MHDpy.analysis\n",
+    "import mhdpy.importing\n",
+    "import mhdpy.plotting\n",
+    "import mhdpy.analysis\n",
     "from nptdms import TdmsFile as TF\n",
     "\n",
     "import importlib\n",
@@ -38,9 +38,9 @@
    "outputs": [],
    "source": [
     "###Paths###\n",
-    "pathnames_PL = MHDpy.importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2018-04-05 Power dependence\\\\Seqtry2\", regExp= \".*\\.tdms$\")\n",
-    "pathnames_power = MHDpy.importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2018-04-05 Power dependence\\\\Powermeter\\\\Chosen\\\\50Hz\", regExp= \".*\\.tdms$\")\n",
-    "pathnames_laser= MHDpy.importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\LaserProfile\")\n",
+    "pathnames_PL = mhdpy.importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2018-04-05 Power dependence\\\\Seqtry2\", regExp= \".*\\.tdms$\")\n",
+    "pathnames_power = mhdpy.importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\2018-04-05 Power dependence\\\\Powermeter\\\\Chosen\\\\50Hz\", regExp= \".*\\.tdms$\")\n",
+    "pathnames_laser= mhdpy.importing.get_pathnames(\"C:\\\\Users\\\\aspit\\\\OneDrive\\\\Data\\\\LaserProfile\")\n",
     "\n",
     "###Files###\n",
     "\n",
@@ -123,15 +123,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(MHDpy.analysis)\n",
+    "importlib.reload(mhdpy.analysis)\n",
     "\n",
     "#do peak average analysis and add it to the dataframe\n",
     "\n",
     "\n",
     "for index in data_50Hz['Data'].index:\n",
     "    data = data_50Hz['Data'][index]\n",
-    "    peak1_max, wl_peak1, data_cut_peak1 = MHDpy.analysis.PL_peakmax(data, wavelength, 778,780.5)\n",
-    "    peak2_max, wl_peak2, data_cut_peak2 = MHDpy.analysis.PL_peakmax(data, wavelength, 793,797)\n",
+    "    peak1_max, wl_peak1, data_cut_peak1 = mhdpy.analysis.PL_peakmax(data, wavelength, 778,780.5)\n",
+    "    peak2_max, wl_peak2, data_cut_peak2 = mhdpy.analysis.PL_peakmax(data, wavelength, 793,797)\n",
     "    data_50Hz['Data_p1_max'][index] = peak1_max\n",
     "    data_50Hz['Data_p2_max'][index] = peak2_max\n",
     "    data_50Hz['Data_p1_max_norm'][index] = peak1_max/peak1_max.max()\n",
@@ -151,9 +151,9 @@
     "                         columns = { 'Fit_p1_param','Fit_p1', 'Fit_p1_time','Fit_p2_param', 'Fit_p2', 'Fit_p2_time'})\n",
     "\n",
     "    \n",
-    "MHDpy.analysis.PL_fit_powerdep(data_50Hz,fits_50Hz,'NDF00',2,12)\n",
-    "MHDpy.analysis.PL_fit_powerdep(data_50Hz,fits_50Hz,'NDF01',2,7)\n",
-    "MHDpy.analysis.PL_fit_powerdep(data_50Hz,fits_50Hz,'NDF02',2,5)\n"
+    "mhdpy.analysis.PL_fit_powerdep(data_50Hz,fits_50Hz,'NDF00',2,12)\n",
+    "mhdpy.analysis.PL_fit_powerdep(data_50Hz,fits_50Hz,'NDF01',2,7)\n",
+    "mhdpy.analysis.PL_fit_powerdep(data_50Hz,fits_50Hz,'NDF02',2,5)\n"
    ]
   },
   {
