--- a/Analysis/Jupyter Notebooks/Bowen/Untitled1.ipynb
+++ b/Analysis/Jupyter Notebooks/Bowen/Untitled1.ipynb
@@ -2,11 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mhdpy import *"
+    "from mhdpy import *\n",
+    "from nptdms import TdmsFile as TF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = [1039, 1050, 1096, 1145, 1180, 1200]\n",
+    "Spcm = ['Flame', 'NIRQuest512']\n",
+    "filenames = []\n",
+    "for t in T:\n",
+    "    for s in Spcm:\n",
+    "        filenames.append((s+'_'+str(t)+'C.tdms'))\n",
+    "\n",
+    "path = 'Z:\\\\Test Data\\\\Raw Data\\\\Materials Testing\\\\2018-10-15\\\\UnspecifiedProj\\\\Measure\\\\'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<nptdms.tdms.TdmsFile at 0x88d8908>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TF(path+filenames[1])"
    ]
   },
   {
